src/test/ui/borrowck/issue-81365-7.stderr
error[E0506]: cannot assign to `c.container_field` because it is borrowed
  --> $DIR/issue-81365-7.rs:20:5
   |
LL |     let first = &c.target_field;
   |                  - borrow of `c.container_field` occurs here
LL |     c.container_field = true;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `c.container_field` occurs here
LL |     first;
   |     ----- borrow later used here
   |
   = note: borrow occurs due to deref coercion to `DerefTarget`
note: deref defined here
  --> $DIR/issue-81365-7.rs:12:5
   |
LL |     type Target = DerefTarget;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
